# catch-cli

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/api_client/: cli_entity.rs  mod.rs  request_entity.rs  response_entity.rs  session_entity.rs  session_status_entity.rs
src/code_analyzer/: mod.rs  ui.rs
src/code_candidate_selector/: mod.rs  ui.rs
src/code_reader/: mod.rs
src/code_uploader/: mod.rs  ui.rs
src/cryptography/: mod.rs
src/git_info/: mod.rs  ui.rs
src/ongoing_session/: active_session_checker.rs  mod.rs  session_connector.rs
src/terminal/: mod.rs
tests/: api_client_tests.rs  code_analyzer_tests.rs  code_candidate_selector_tests.rs  code_reader_tests.rs  cryptography_tests.rs  git_info_tests.rs  ongoing_session_tests.rs  session_tests.rs
