[package]
authors = ["Dora Lee <dora@at.studio>"]
categories = ["command-line-utilities"]
description = "Catch (trycatch.ai) CLI"
homepage = "https://trycatch.ai"
license = "Apache-2.0"
name = "catch-cli"
repository = "https://github.com/append-at/catch-cli"
version = "1.0.0"
edition = '2021'
rust-version = "1.80"

[dependencies]
# Async Thread
flume = "0.11.0"
once_cell = "1.19.0"
tokio = { version = "1.39.3", features = ["rt-multi-thread", "rt", "macros"] }

# Logging
log = "0.4.22"

# UI
ratatui = "0.28.1"
tui-textarea = "0.6.1"

# Unicode
unicode-segmentation = "1.10.1"
