[package]
authors = ["Dora Lee <dora@at.studio>"]
categories = ["command-line-utilities"]
description = "Catch (trycatch.ai) CLI"
homepage = "https://trycatch.ai"
license = "Apache-2.0"
name = "catch-cli"
repository = "https://github.com/append-at/catch-cli"
version = "1.0.0"
edition = '2021'
rust-version = "1.80"

[dependencies]
# Async Thread
flume = "0.11.0"
once_cell = "1.19.0"
tokio = { version = "1.39.3", features = ["rt-multi-thread", "rt", "macros", "fs"] }

# Logging
log = "0.4.22"
handsome_logger = "0.8.0"

# UI
color-eyre = "0.6.3"
ratatui = "0.28.1"
tui-textarea = "0.6.1"
throbber-widgets-tui = "0.7.0"
unicode-width = "0.1.13"

# Unicode
unicode-segmentation = "1.10.1"

# Serialization
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"

# Networking
reqwest = { version = "0.12.7", features = ["json"] }

# I/O
tempfile = "3.12.0"
regex = "1.10.6"

# Cryptography
rsa = { version = "0.9.6", features = ["sha2"] }
rand = "0.8.5"
base64 = "0.22.1"
pkcs8 = "0.10.2"
libaes = "0.7.0"

# Browser
webbrowser = "1.0.1"

# Error Reporting
sentry = { version = "0.34.0", features = ["debug-images"] }

[dev-dependencies]
mockito = "1.5.0"
tokio = { version = "1.39.3", features = ["full", "test-util"] }

[[bin]]
name = "catch"
path = "src/bin/main.rs"

[profile.release-with-debug]
inherits = "release"
debug = true
